data/derived/fa15/progs/unify/prog1921.ml.out
Characters 368-369:
  let args = List.rev(List.combine 0::l1 0::l2) in  
                                   ^
Error: This expression has type int but an expression was expected of type
         'a list
